:bug: scrollbar

--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,6 @@
   height: 100%;
   width: 100%;
   -webkit-font-smoothing: antialiased;
-  overflow: scroll;
 }
 section.section{
   position: relative;
@@ -105,7 +104,7 @@ section.section.section--about .comment:before {
     bottom: 8px;
     left: -27px;
     border: 10px solid transparent;
-    border-right: 12px solid #444; /*10px*/
+    border-right: 13px solid #444; /*10px*/
     z-index: 1;
 }
 /*====================
